src/test/deca/context/invalid/class/59-declFieldIncompatible1.deca
/* Description:
    teste la regle (3.7) de la vérification contextuelles
    Déclaration de champ avec initialisation incompatibles

    Historique:
      cree le 21/01/2020
*/

class A {
  float x;
  int a = x; // assing incompatible entre float et int


}
